--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,62 @@
-#Files to ignore
-.Rproj.user
+# History files
 .Rhistory
+.Rapp.history
+
+# Session Data files
 .RData
+
+# User-specific files
 .Ruserdata
 
-.shp
-.shx
-.prj
-.dbf
-.DBF
-.cpg
+# Example code in package build process
+*-Ex.R
 
+# Output files from R CMD build
+/*.tar.gz
 
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+*.Rproj
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# R Environment Variables
+.Renviron
+
+# OS files
+desktop.ini
+.DS_Store
+
+# Spatial data
+*.shp
+*.shx
+*.prj
+*.dbf
+*.DBF
+*.cpg
+*.gpkg
+
+# Other data
+*.csv
+*.xlsx
+*.zip
+*.dta
+*.docx
+*.RDS
+/.quarto/
